@@ -1143,6 +1143,9 @@ Release 0.23.10 - UNRELEASED
 
   IMPROVEMENTS
 
+    YARN-985. Nodemanager should log where a resource was localized (Ravi
+    Prakash via jeagles)
+
   OPTIMIZATIONS
 
   BUG FIXES
